header framed out with comments added

--- a/index.html
+++ b/index.html
@@ -1,18 +1,33 @@
 <!Doctype html>
 <html>
 <head>
+  <!--link to stylesheet-->
+
   <link rel="stylesheet" type="text/css" href="resources/css/style.css"
   <title></title>
+
 </head>
 
 <body>
 
+  <!--set image container-->
+<div class="hero-image">
+
+  <!--identify section title -->
+  <p id="hero-title">Broadway Design</p>
+  <!--set nav links - don't use nav to make vertical layout easier -->
+      <p><a href="home">Home</a></p>
+      <p><a href="process">Process</a></p>
+      <p><a href="work">Work</a></p>
+      <p><a href="team">Team</a></p>
+      <p><a href="contact">Contact</a></p>
+  </div>
+    <div id=home>
+
+  </div>
 
 
-<div id=home>
-  <nav>
-  </nav>
-</div>
+
 
 <div id=process>
 </div>
