--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
 
   </div>
 
-
-
-
-<div id=process>
+<div>
+  <p id="process-header">Our Process<p>
+    <img src="resources/images/identify.svg">
+    <p id="process-step">Identify</p>
+   <p id="process-explain">We focus on the most important details</p>
 </div>
 
 <div id=work>
